force-app/main/default/objects/PricingSTP__mdt/PricingSTP__mdt.object-meta.xml
<CustomObject>
    <label>PricingSTP</label>
    <pluralLabel>PricingSTPs</pluralLabel>
</CustomObject>