force-app/main/default/objects/PricingSTP__mdt/fields/AcitonName__c.field-meta.xml
<CustomField>
    <fullName>AcitonName__c</fullName>
    <label>AcitonName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>