force-app/main/default/objects/PricingSTP__mdt/fields/Additional_Processing_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Processing_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDT-40031-Added to indicate that additional processing is needed</description>
    <label>Additional Processing Needed</label>
    <type>Checkbox</type>
</CustomField>