force-app/main/default/objects/PricingSTP__mdt/fields/APIServiceChargeCode__c.field-meta.xml
<CustomField>
    <fullName>APIServiceChargeCode__c</fullName>
    <label>APIServiceChargeCode</label>
    <length>250</length>
    <type>Text</type>
</CustomField>