force-app/main/default/objects/PricingSTP__mdt/fields/IsCreateAcornBaseline__c.field-meta.xml
<CustomField>
    <fullName>IsCreateAcornBaseline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreateAcornBaseline</label>
    <type>Checkbox</type>
</CustomField>