force-app/main/default/objects/PricingSTP__mdt/fields/IsCreateQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>IsCreateQuoteLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreateQuoteLine</label>
    <type>Checkbox</type>
</CustomField>