force-app/main/default/objects/PricingSTP__mdt/fields/IsDeleteQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>IsDeleteQuoteLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleteQuoteLine</label>
    <type>Checkbox</type>
</CustomField>