force-app/main/default/objects/PricingSTP__mdt/fields/ServiceChargeCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceChargeCode__c</fullName>
    <label>ServiceChargeCode</label>
    <length>250</length>
    <type>Text</type>
</CustomField>