force-app/main/default/objects/PricingSTP__mdt/fields/ServiceChargeName__c.field-meta.xml
<CustomField>
    <fullName>ServiceChargeName__c</fullName>
    <label>ServiceChargeName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>