force-app/main/default/objects/PricingSTP__mdt/listViews/SPT_View.listView-meta.xml
<ListView>
    <fullName>SPT_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ServiceChargeName__c</columns>
    <columns>ServiceChargeCode__c</columns>
    <columns>Additional_Processing_Needed__c</columns>
    <columns>APIServiceChargeCode__c</columns>
    <columns>AcitonName__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsCreateAcornBaseline__c</columns>
    <columns>IsCreateQuoteLine__c</columns>
    <columns>IsDeleteQuoteLine__c</columns>
    <filterScope>Everything</filterScope>
    <label>SPT View</label>
</ListView>